# data-analyser

./: .env  .gitignore  README.md  agent_demo.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh
config/: config.yaml  docker-config.yaml
data/: porsche_analytics.db
notebooks/: Untitled-1.ipynb  agent_tutorial.ipynb  database_client_tutorial.ipynb  insight_tool_tutorial.ipynb  jira_client_tutorial.ipynb  jira_tickets_solution.ipynb  sql_gen_demo.ipynb  sql_generation_tutorial.ipynb  sql_validator_tool_tutorial.ipynb
scripts/: constants.py  create_jira_tickets.py  create_schema.py  delete_jira_tickets.py  generate_data.py  init-multiple-dbs.sh  install_mock_requirements.py  make_executable.sh  setup_langchain_db.py  startup.sh  troubleshoot_jira.sh  verify_db.sh
src/agent/: agent.py  workflow.py
src/clients/: db_client.py  jira_client.py
src/models/: schemas.py
src/tools/: insight_tool.py  prompt_templates.py  sql_tool.py  validator_tool.py
tests/: conftest.py  test_agent.py  test_main.py
tests/test_clients/: test_db_client.py  test_jira_client.py
tests/test_tools/: test_insight_tool.py  test_sql_tool.py  test_validator_tool.py
