[project]
name = "data-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.1.0",
    "langgraph>=0.5.0",
    "langgraph-checkpoint>=2.1.0",
    "matplotlib>=3.10.3",
    "openai>=1.93.0",
    "seaborn>=0.13.2",
    "sql-metadata>=2.17.0",
    "sqlglot>=26.33.0",
    "sqlparse>=0.5.3",
    "sqlvalidator>=0.0.20",
]
